--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <head>
 
     <title>poroject-1</title>
+    <link rel="stylesheet" href="css/style.css">
 
     </head>
 
     <body>
+
+        <h1>طراحی وب سایت</h1>
 
 
     </body>
